# memetrends

./: .dockerignore  .gitignore  Dockerfile  README.md  celery_worker.py  config.py  data.json  manage.py  pyproject.toml  render.yaml  requirements.txt  schema.yaml
accounts/: urls.py  views.py
ingest/: reddit_client.py  tasks.py  utils.py  x_client.py
memes/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
memes/migrations/: 0001_initial.py  0002_remove_meme_engagement_score_meme_comments_and_more.py  0003_alter_meme_comments_alter_meme_likes_and_more.py  0004_remove_meme_memes_meme_platfor_629891_idx_and_more.py
memetrends/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
