[project]
name = "memetrends"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "celery-types==0.23.0",
    "dj-database-url>=3.0.1",
    "django>=5.2.6",
    "django-filter>=25.1",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "praw>=7.8.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "ruff>=0.13.0",
    "tweepy>=4.16.0",
]
